add_library(MandrillLib ${BCS_LIBRARY_TYPE}
	CacheInterface/CacheInterface.h
	CacheInterface/base/api_interop.cpp
	CacheInterface/base/api_interop.h
	CacheInterface/base/cache_cluster.cpp
	CacheInterface/base/cache_cluster.h
	CacheInterface/base/cache_file_api.cpp
	CacheInterface/base/cache_file_api.h
	CacheInterface/base/cache_file_header.cpp
	CacheInterface/base/cache_file_header.h
	CacheInterface/base/cache_file_reader.cpp
	CacheInterface/base/cache_file_reader.h
	CacheInterface/base/debug_reader.cpp
	CacheInterface/base/debug_reader.h
	CacheInterface/base/localization_reader.cpp
	CacheInterface/base/localization_reader.h
	CacheInterface/base/resource_reader.cpp
	CacheInterface/base/resource_reader.h
	CacheInterface/base/tag_group.cpp
	CacheInterface/base/tag_group.h
	CacheInterface/base/tag_instance.cpp
	CacheInterface/base/tag_instance.h
	CacheInterface/base/tag_reader.cpp
	CacheInterface/base/tag_reader.h
	CacheInterface/cache_byteswap.cpp
	CacheInterface/cache_byteswap.h
	CacheInterface/gen3/gen3_cache_file_header.cpp
	CacheInterface/gen3/gen3_cache_file_header.h
	CacheInterface/halo1/halo1_cache_cluster.cpp
	CacheInterface/halo1/halo1_cache_cluster.h
	CacheInterface/halo1/halo1_cache_file_header.cpp
	CacheInterface/halo1/halo1_cache_file_header.h
	CacheInterface/halo1/halo1_cache_file_reader.cpp
	CacheInterface/halo1/halo1_cache_file_reader.h
	CacheInterface/halo1/halo1_debug_reader.cpp
	CacheInterface/halo1/halo1_debug_reader.h
	CacheInterface/halo1/halo1_localization_reader.cpp
	CacheInterface/halo1/halo1_localization_reader.h
	CacheInterface/halo1/halo1_resource_reader.cpp
	CacheInterface/halo1/halo1_resource_reader.h
	CacheInterface/halo1/halo1_tag_group.cpp
	CacheInterface/halo1/halo1_tag_group.h
	CacheInterface/halo1/halo1_tag_group_hierarchy.cpp
	CacheInterface/halo1/halo1_tag_group_hierarchy.h
	CacheInterface/halo1/halo1_tag_instance.cpp
	CacheInterface/halo1/halo1_tag_instance.h
	CacheInterface/halo1/halo1_tag_reader.cpp
	CacheInterface/halo1/halo1_tag_reader.h
	CacheInterface/halo3/halo3_api_interop.cpp
	CacheInterface/halo3/halo3_api_interop.h
	CacheInterface/halo3/halo3_cache_cluster.cpp
	CacheInterface/halo3/halo3_cache_cluster.h
	CacheInterface/halo3/halo3_cache_file_header.cpp
	CacheInterface/halo3/halo3_cache_file_header.h
	CacheInterface/halo3/halo3_cache_file_reader.cpp
	CacheInterface/halo3/halo3_cache_file_reader.h
	CacheInterface/halo3/halo3_codec.cpp
	CacheInterface/halo3/halo3_codec.h
	CacheInterface/halo3/halo3_debug_reader.cpp
	CacheInterface/halo3/halo3_debug_reader.h
	CacheInterface/halo3/halo3_localization_reader.cpp
	CacheInterface/halo3/halo3_localization_reader.h
	CacheInterface/halo3/halo3_resource_reader.cpp
	CacheInterface/halo3/halo3_resource_reader.h
	CacheInterface/halo3/halo3_tag_group.cpp
	CacheInterface/halo3/halo3_tag_group.h
	CacheInterface/halo3/halo3_tag_instance.cpp
	CacheInterface/halo3/halo3_tag_instance.h
	CacheInterface/halo3/halo3_tag_reader.cpp
	CacheInterface/halo3/halo3_tag_reader.h
	CacheInterface/infinite/infinite_cache_cluster.cpp
	CacheInterface/infinite/infinite_cache_cluster.h
	CacheInterface/infinite/infinite_cache_file_header.cpp
	CacheInterface/infinite/infinite_cache_file_header.h
	CacheInterface/infinite/infinite_cache_file_reader.cpp
	CacheInterface/infinite/infinite_cache_file_reader.h
	CacheInterface/infinite/infinite_debug_reader.cpp
	CacheInterface/infinite/infinite_debug_reader.h
	CacheInterface/infinite/infinite_file_entry_block_map.cpp
	CacheInterface/infinite/infinite_file_entry_block_map.h
	CacheInterface/infinite/infinite_generic_module_file_entry.cpp
	CacheInterface/infinite/infinite_generic_module_file_entry.h
	CacheInterface/infinite/infinite_localization_reader.cpp
	CacheInterface/infinite/infinite_localization_reader.h
	CacheInterface/infinite/infinite_resource_reader.cpp
	CacheInterface/infinite/infinite_resource_reader.h
	CacheInterface/infinite/infinite_tag_group.cpp
	CacheInterface/infinite/infinite_tag_group.h
	CacheInterface/infinite/infinite_tag_instance.cpp
	CacheInterface/infinite/infinite_tag_instance.h
	CacheInterface/infinite/infinite_tag_reader.cpp
	CacheInterface/infinite/infinite_tag_reader.h
	CacheInterface/infinite/infinite_ucs_reader.cpp
	CacheInterface/infinite/infinite_ucs_reader.h
	Filesystem/Chunks/LayoutChunks/array_definitions_chunk.cpp
	Filesystem/Chunks/LayoutChunks/array_definitions_chunk.h
	Filesystem/Chunks/LayoutChunks/block_definitions_chunk.cpp
	Filesystem/Chunks/LayoutChunks/block_definitions_chunk.h
	Filesystem/Chunks/LayoutChunks/custom_block_index_search_names_chunk.cpp
	Filesystem/Chunks/LayoutChunks/custom_block_index_search_names_chunk.h
	Filesystem/Chunks/LayoutChunks/data_definition_name_chunk.cpp
	Filesystem/Chunks/LayoutChunks/data_definition_name_chunk.h
	Filesystem/Chunks/LayoutChunks/field_types_chunk.cpp
	Filesystem/Chunks/LayoutChunks/field_types_chunk.h
	Filesystem/Chunks/LayoutChunks/fields_chunk.cpp
	Filesystem/Chunks/LayoutChunks/fields_chunk.h
	Filesystem/Chunks/LayoutChunks/interop_definitions_chunk.cpp
	Filesystem/Chunks/LayoutChunks/interop_definitions_chunk.h
	Filesystem/Chunks/LayoutChunks/resource_definitions_chunk.cpp
	Filesystem/Chunks/LayoutChunks/resource_definitions_chunk.h
	Filesystem/Chunks/LayoutChunks/string_data_chunk.cpp
	Filesystem/Chunks/LayoutChunks/string_data_chunk.h
	Filesystem/Chunks/LayoutChunks/string_lists_chunk.cpp
	Filesystem/Chunks/LayoutChunks/string_lists_chunk.h
	Filesystem/Chunks/LayoutChunks/string_offsets_chunk.cpp
	Filesystem/Chunks/LayoutChunks/string_offsets_chunk.h
	Filesystem/Chunks/LayoutChunks/structure_definitions_chunk.cpp
	Filesystem/Chunks/LayoutChunks/structure_definitions_chunk.h
	Filesystem/Chunks/LayoutChunks/tag_group_layout_chunk.cpp
	Filesystem/Chunks/LayoutChunks/tag_group_layout_chunk.h
	Filesystem/Chunks/LayoutChunks/tag_layout_prechunk_chunk.cpp
	Filesystem/Chunks/LayoutChunks/tag_layout_prechunk_chunk.h
	Filesystem/Chunks/LayoutChunks/tag_layout_preinterop_chunk.cpp
	Filesystem/Chunks/LayoutChunks/tag_layout_preinterop_chunk.h
	Filesystem/Chunks/LayoutChunks/tag_layout_v3_chunk.cpp
	Filesystem/Chunks/LayoutChunks/tag_layout_v3_chunk.h
	Filesystem/Chunks/MonolithicChunks/build_identifier_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/build_identifier_chunk.h
	Filesystem/Chunks/MonolithicChunks/cache_heap_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/cache_heap_chunk.h
	Filesystem/Chunks/MonolithicChunks/exploded_dependencies_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/exploded_dependencies_chunk.h
	Filesystem/Chunks/MonolithicChunks/monolithic_index_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/monolithic_index_chunk.h
	Filesystem/Chunks/MonolithicChunks/monolithic_tag_file_index_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/monolithic_tag_file_index_chunk.h
	Filesystem/Chunks/MonolithicChunks/monolithic_tag_file_layout_registry_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/monolithic_tag_file_layout_registry_chunk.h
	Filesystem/Chunks/MonolithicChunks/optimized_dependencies_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/optimized_dependencies_chunk.h
	Filesystem/Chunks/MonolithicChunks/partition_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/partition_chunk.h
	Filesystem/Chunks/MonolithicChunks/partition_list_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/partition_list_chunk.h
	Filesystem/Chunks/MonolithicChunks/partitioned_heap_entry_list_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/partitioned_heap_entry_list_chunk.h
	Filesystem/Chunks/MonolithicChunks/partitioned_persistent_heap_backend_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/partitioned_persistent_heap_backend_chunk.h
	Filesystem/Chunks/MonolithicChunks/tag_dependency_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/tag_dependency_chunk.h
	Filesystem/Chunks/MonolithicChunks/tag_dependency_index_loader_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/tag_dependency_index_loader_chunk.h
	Filesystem/Chunks/MonolithicChunks/tag_file_blocks_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/tag_file_blocks_chunk.h
	Filesystem/Chunks/MonolithicChunks/tag_file_heap_partition_config_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/tag_file_heap_partition_config_chunk.h
	Filesystem/Chunks/MonolithicChunks/tag_file_index_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/tag_file_index_chunk.h
	Filesystem/Chunks/MonolithicChunks/tag_file_persistent_heap_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/tag_file_persistent_heap_chunk.h
	Filesystem/Chunks/MonolithicChunks/tag_heap_chunk.cpp
	Filesystem/Chunks/MonolithicChunks/tag_heap_chunk.h
	Filesystem/Chunks/TagChunks/binary_data_chunk.cpp
	Filesystem/Chunks/TagChunks/binary_data_chunk.h
	Filesystem/Chunks/TagChunks/tag_block_chunk.cpp
	Filesystem/Chunks/TagChunks/tag_block_chunk.h
	Filesystem/Chunks/TagChunks/tag_data_chunk.cpp
	Filesystem/Chunks/TagChunks/tag_data_chunk.h
	Filesystem/Chunks/TagChunks/tag_reference_chunk.cpp
	Filesystem/Chunks/TagChunks/tag_reference_chunk.h
	Filesystem/Chunks/TagChunks/tag_resource_data_chunk.cpp
	Filesystem/Chunks/TagChunks/tag_resource_data_chunk.h
	Filesystem/Chunks/TagChunks/tag_resource_exploded_chunk.cpp
	Filesystem/Chunks/TagChunks/tag_resource_exploded_chunk.h
	Filesystem/Chunks/TagChunks/tag_resource_null_chunk.cpp
	Filesystem/Chunks/TagChunks/tag_resource_null_chunk.h
	Filesystem/Chunks/TagChunks/tag_resource_xsynced_chunk.cpp
	Filesystem/Chunks/TagChunks/tag_resource_xsynced_chunk.h
	Filesystem/Chunks/TagChunks/tag_string_id_chunk.cpp
	Filesystem/Chunks/TagChunks/tag_string_id_chunk.h
	Filesystem/Chunks/TagChunks/tag_struct_chunk.cpp
	Filesystem/Chunks/TagChunks/tag_struct_chunk.h
	Filesystem/Chunks/chunk.cpp
	Filesystem/Chunks/chunk.h
	Filesystem/Chunks/monolithic_tag_backend_chunk.cpp
	Filesystem/Chunks/monolithic_tag_backend_chunk.h
	Filesystem/Chunks/tag_header_chunk.cpp
	Filesystem/Chunks/tag_header_chunk.h
	Filesystem/Chunks/typed_chunk.h
	Filesystem/Filesystem.h
	Filesystem/gen1_tag_file_parser.cpp
	Filesystem/gen1_tag_file_parser.h
	Filesystem/gen2_tag_file_parser.cpp
	Filesystem/gen2_tag_file_parser.h
	Filesystem/high_level_tag_file_writer.cpp
	Filesystem/high_level_tag_file_writer.h
	Filesystem/single_tag_file_header.cpp
	Filesystem/single_tag_file_header.h
	Filesystem/single_tag_file_layout_reader.cpp
	Filesystem/single_tag_file_layout_reader.h
	Filesystem/single_tag_file_reader.cpp
	Filesystem/single_tag_file_reader.h
	Filesystem/system_global_unique_identifier.cpp
	Filesystem/system_global_unique_identifier.h
	Filesystem/tag_file_high_level_transplant.cpp
	Filesystem/tag_file_high_level_transplant.h
	Filesystem/tag_file_string_debugger.cpp
	Filesystem/tag_file_string_debugger.h
	HighLevel/HighLevel.h
	HighLevel/cache_file_project.cpp
	HighLevel/cache_file_project.h
	HighLevel/filesystem_project.cpp
	HighLevel/filesystem_project.h
	HighLevel/high_level_cache_cluster_transplant.cpp
	HighLevel/high_level_cache_cluster_transplant.h
	HighLevel/infinite_string_id_manager.cpp
	HighLevel/infinite_string_id_manager.h
	HighLevel/legacy_string_id_manager.cpp
	HighLevel/legacy_string_id_manager.h
	HighLevel/monolithic_project.cpp
	HighLevel/monolithic_project.h
	HighLevel/simple_resource_container.cpp
	HighLevel/simple_resource_container.h
	HighLevel/string_id_manager.cpp
	HighLevel/string_id_manager.h
	HighLevel/tag_project.cpp
	HighLevel/tag_project.h
	Monolithic/Monolithic.h
	Monolithic/monolithic_partition_view.cpp
	Monolithic/monolithic_partition_view.h
	Monolithic/monolithic_resource_handle.cpp
	Monolithic/monolithic_resource_handle.h
	high_level_ctor.cpp
	logging_interface.cpp
	logging_interface.h
	mandrilllib-private-pch.h
	mandrilllib-public-pch.h
	status_interface.cpp
	status_interface.h
	tag_file_reader_stack.cpp
	tag_file_reader_stack.h)

bcs_set_common_properties(MandrillLib)

target_link_libraries(MandrillLib PUBLIC
	Shared
	Platform
	TemplateLibrary
	TagDefinitions
	TagReflection
	TagValidate
	murmur3
	Oozle
	lzxlib
	blamlib
	pugixml-static
	xxhash
	zlib
	${BCS_GENERATED_TAG_PROJECTS})

target_precompile_headers(MandrillLib PRIVATE
	"$<$<COMPILE_LANGUAGE:CXX>:mandrilllib-private-pch.h>")
	
set_target_properties(MandrillLib PROPERTIES
	FOLDER "Tags")
